# doocs-server-hub

./: .gitignore  RPC_LIBNO  hub_CONF.TEMPLATE  hub_server.conf  meson.build
debian/: postinst  postrm  rules
include/: D_prop_wrapper.h  EqDevice.h  descriptors.h
src/: D_prop_wrapper.cc  EqDevice.cc  main.cc
subprojects/: doocs-json.wrap
